# advent-of-code

./: Cargo.toml
day1_day2/src/: day1_2.rs  day2.rs  day3.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
src/: aoc01.rs  day2_2.rs  day3.rs
