[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["raghav.narula"]
edition = "2018"

[dependencies]

[[bin]]
name = "day1"
path = "src/aoc01.rs"

[[bin]]
name = "day1-2"
path = "src/day1_2.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day2-2"
path = "src/day2_2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"